# home-manager-config

./: .gitignore  .sops.yaml  aboba  flake.nix  flameshot.nix  home.nix  termfilechooser.conf  yazi-wrapper.sh
modules/: default.nix  flameshot.nix  git.nix  gpg.nix  kitty.nix  opencode.nix  qutebrowser.nix  sops.nix  tmux.nix  vscode.nix  zed-editor.nix  zed-editor.thinkpad.nix
modules/nvim/: default.nix
modules/opencode/: default.nix
modules/opencode/agents/: ask.md
modules/qutebrowser/: default.nix  nord-theme.nix
modules/shell/: config.nu  default.nix
modules/shell/scripts/: task.nu
modules/syncthing/: default.nix
modules/xsession/: default.nix  xmonad.hs  xscreensaver
modules/yazi/: default.nix
nvim/: options.lua
nvim/plugin/: cmp.lua  lsp.lua  telescope.lua  treesitter.lua
secrets/: secrets.yaml
xmonad/: CHANGELOG.md  shell.nix  xmonad-chell-config.cabal  xmonad.hs
xmonad/app/: Main.hs
xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
