cabal-version:      3.4
name:               xmonad-chell-config
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             chell4
maintainer:         arsenijalfeev@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmonad-chell-config
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base, 
        xmonad,
        xmonad-contrib,
        random
    hs-source-dirs:   app
    default-language: GHC2021
